correctly align document header and footer; suggested by kristaps@

--- a/man.css
+++ b/man.css
@@ -1,4 +1,4 @@
-/* $Id: man.css,v 1.1 2014/11/07 17:31:37 schwarze Exp $ */
+/* $Id: man.css,v 1.2 2014/12/10 22:21:29 schwarze Exp $ */
 /*
  * This is an example style-sheet provided for mandoc(1) and the -Thtml
  * or -Txhtml output mode.
@@ -20,11 +20,14 @@ div.mandoc div.subsection	{ } /* Sub-sections (Ss, SS). */
 div.mandoc table.synopsis	{ } /* SYNOPSIS section table. */
 div.mandoc table.foot		{ } /* Document footer. */
 div.mandoc td.foot-date		{ width: 50%; } /* Document footer: date. */
-div.mandoc td.foot-os		{ width: 50%; } /* Document footer: OS/source. */
+div.mandoc td.foot-os		{ width: 50%;
+				  text-align: right; } /* Document footer: OS/source. */
 div.mandoc table.head		{ } /* Document header. */
 div.mandoc td.head-ltitle	{ width: 10%; } /* Document header: left-title. */
-div.mandoc td.head-vol		{ width: 80%; } /* Document header: volume. */
-div.mandoc td.head-rtitle	{ width: 10%; } /* Document header: right-title. */
+div.mandoc td.head-vol		{ width: 80%;
+				  text-align: center; } /* Document header: volume. */
+div.mandoc td.head-rtitle	{ width: 10%;
+				  text-align: right; } /* Document header: right-title. */
 div.mandoc .display		{ } /* All Bd, D1, Dl. */
 div.mandoc .list		{ } /* All Bl. */
 div.mandoc i			{ } /* Italic: BI, IB, I, (implicit). */
